# aws_updates

./: .pre-commit-hooks.yaml  AUTHORS  README.md  setup.cfg
aws_update_variables/cmd/: boto_constraints.py  user_agent.py
