[metadata]
name = aws_updates
summary = Precommit hook to update hard-coded variables from AWS collections.
description-file =
    README.md
author = Aubin Bikouo (abikouo)
home-page = https://github.com/abikouo/aws_updates
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[files]
packages = aws_update_variables

[entry_points]
console_scripts =
    aws_update_boto_constraints = aws_update_variables.cmd.boto_constraints:main
    aws_update_user_agent = aws_update_variables.cmd.user_agent:main
